[package]
name = "todo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "=3.1.6"
colored = "=2.0.0"
itertools = "=0.10.3"
regex = "=1.5.5"
serde = { version = "=1.0.136", features = ["serde_derive"] }
serde_json = "=1.0.79"
